# music-diary-be

./: .gitignore  Dockerfile  README.md  docker-compose.https.yml  docker-compose.yml  nginx.conf
app/: pyproject.toml  pytest.ini
app/saved_lyrics/: 6cf9b7b4-c8f5-4f5e-9568-1f589843683e_1f42e472-3c15-4f2d-97ec-8d69e531716c.txt  6cf9b7b4-c8f5-4f5e-9568-1f589843683e_4c56da01-0839-47a7-ad9f-39a5f5a64918.txt  6cf9b7b4-c8f5-4f5e-9568-1f589843683e_cf8cd7ec-f9d9-451a-83c6-6493c37c5bde.txt
app/src/: llm_instance.py  main.py
app/src/analyzer/: music.py  result.json
app/src/chatbot/: chat.py  execute_state.py  history_summary.py  lyrics_change.py  lyrics_creation.py  music_creation.py  music_discussion.py  prefix.py  state_step_chat.py  termination.py  therapeutic_connection.py  therapeutic_connection_re.py  types.py
app/src/database/: manager.py  verification.py
app/src/utils/: util.py
app/tests/database/: test_manager.py
